--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
-@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap&subset=korean');
+/* @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap&subset=korean'); */
 
-.lyk-main {
+.lyk-main-container {
     background-color: #AAAAAA;
     width: 50vw;
     height: 80vh;
 }
 
 .lyk-item {
-    font-family: 'Black Han Sans', sans-serif;
+    /* font-family: 'Black Han Sans', sans-serif; */
     background-color: cornsilk;
     padding: 2px;
     border: 1px solid black;
@@ -20,4 +20,20 @@
     height: 30%;
     border: gainsboro 1px solid;
     background-color: lightcyan;
+}
+
+.lyk-status-health-con {
+    
+}
+
+.lyk-status-health-level-1 {
+
+}
+
+.lyk-status-health-level-2 {
+
+}
+
+.lyk-status-health-level-3 {
+
 }
